syntax = "proto3";

package pb;
option go_package = "github.com/rruzicic/globetrotter/bnb/recommendation-service/pb";

import "google/protobuf/timestamp.proto";

message Accommodation {
    string name = 1;
    string location = 2;
    float price = 3;
    string mongoId = 4;
}

message Reservation {
    string mongoId = 1;
    string userMongoId = 2;
    string accommodationMongoId = 3;
    google.protobuf.Timestamp reservationEnd = 4;
}

message Review {
    int32 value = 1;
    string mongoId = 2;
    string userMongoId = 3;
    string accommodationMongoId = 4;
}

message User {
    string name = 1;
    string mongoId = 2;
}

message Empty {}

service RecommendationServiceDBEvents {
    rpc CreateAccommodation(Accommodation) returns (Empty) {}
    rpc CreateUser(User) returns (Empty) {}
    rpc CreateReservation(Reservation) returns (Empty) {}
    rpc CreateReview(Review) returns (Empty) {}

    rpc DeleteAccommodation(Accommodation) returns (Empty) {}
    rpc DeleteUser(User) returns (Empty) {}
    rpc DeleteReservation(Reservation) returns (Empty) {}
    rpc DeleteReview(Review) returns (Empty) {}

    rpc UpdateAccommodation(Accommodation) returns (Empty) {}
    rpc UpdateUser(User) returns (Empty) {}
    rpc UpdateReservation(Reservation) returns (Empty) {}
    rpc UpdateReview(Review) returns (Empty) {}
}
